TGC Compact initial
- British America content should now be playable. Report bugs if encountered. Dominions possible:
- British Dominion of New England
- British Dominion of Virginia
- British Dominion of Georgia
- British Dominion of Louisiana
- Expanded Dominion of Canada
- Rebellion and revolt mechanics in British America
- A potential of a second American War of Independence
- Introduced Baseline Prestige Mechanic. Now, independent recognized states will have a baseline prestige of 1000. This will no longer allow vassals to break their status and go GP. However, it still allows them to slowly accumulate prestige and maybe one day break it by making the rankings. This feature is experimental, please report any major bugs you encounter.
- Added Perfo's American CBs
- Dismantlement CBs will now take 100 score
- Fixed a major Russia bug in Donbass
- Fixed a major bug of African natives assimilating to colonizer primary culture
- Fixed the brigade balancing for Britain, they won't call reservists anymore if London (or any capital of a GP) has more than 5% soldiers
- GP sphere leader of Venezuela, Colombia and Ecuador can now form Gran Colombia
- AI should no longer adopt natives as accepted if their laws are weong
- Fixed a bug of Crimean War not happening if France forms Latin Union
- Russia will now be able to inherit newly acquired puppets if they achieve dominance in the Great Game (Persia, Afghanistan, and so forth)
- Russian America balancing, fixed issue with culture and Russia should keep more ports now
- Ported Wyrm's late game events balancing (too many fascist/communist event sways of population)
- New World will no longer have 1000% RGO size buff, rather it will be 250%
- Jews should now emigrate more properly to a free Israel

--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -4027,9 +4027,9 @@ LSK_proletarian_dictatorship;Alaskan Communist Republic;x;
 LSK_presidential_dictatorship;Republic of Alaska;x;
 LSK_bourgeois_dictatorship;Republic of Alaska;x;
 LSK_fascist_dictatorship;Alaskan State of the North;x;
-LSK_colonial_company;Russkaya Amyerika;x;
-LSK_rus_colonial_company;Russkaya Amyerika;x;
-LSK_dominion;Russkaya Amyerika;x;
+LSK_colonial_company;Novaya Rossiya;x;
+LSK_rus_colonial_company;Novaya Rossiya;x;
+LSK_dominion;Novaya Rossiya;x;
 LSK_ADJ;Alaskan;x;
 ##### LUA #####;
 LUA_absolute_monarchy;Anachak Ruangphabang;x;
