--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -27,6 +27,10 @@ acquire_substate_region;Acquire substate region;AcquÈrir une rÈgion comme Sous-…
 acquire_substate_region_desc;Acquire a region from enemy ßYsubstateßW;AcquÈrir une rÈgion d'un ßYSous-…tatßW ennemi;Beschafft eine Region des Feindes ßYsubstateßW;;;;;;;;;;;x
 acquire_substate_region_setup;Acquire $STATE$ from $RECIPIENT$;Prendre $STATE$ de $RECIPIENT$;$STATE$ von $RECIPIENT$ erobern.;;;;;;;;;;;x
 acquire_substate_region_short;Acquire $STATE$;Prendre $STATE$;$STATE$ erobern;;;;;;;;;;;x
+acw_intervention;End the American Civil War;;;;;;;;;;;;;x
+acw_intervention_desc;This conflict is severely hurting our cotton imports and should be ended as soon as possible;;;;;;;;;;;;;x
+acw_intervention_setup;Intervene in the American Civil War;;;;;;;;;;;;;x
+acw_intervention_short;Intervene in the American Civil War;;;;;;;;;;;;;x
 add_to_sphere;Add to Sphere;ajouter ‡ la sphËre;In Einflusssph‰re aufnehmen;;;;;;;;;;;x
 add_to_sphere_desc;Add country to our ßYSphere of InfluenceßW;Ajouter un pays ‡ notre ßYsphËre d'influenceßW;F¸gen Sie das Land Ihrer ßYEinflusssph‰reßW hinzu.;;;;;;;;;;;x
 add_to_sphere_setup;Add $RECIPIENT$ to Sphere of Influence;ajouter $RECIPIENT$ ‡ la sphËre d'influence;$RECIPIENT$ in Einflusssph‰re aufnehmen;;;;;;;;;;;x
@@ -53,6 +57,10 @@ call_allies_cb;Call Allies to Arms;;;;;;;;;;;;;
 call_allies_cb_desc;Call allies to join ongoing wars;;;;;;;;;;;;;
 call_allies_cb_setup;Call allies to join your ongoing wars;;;;;;;;;;;;;
 call_allies_cb_short;Call allies to join ongoing wars;;;;;;;;;;;;;
+caucasus_war;Conquer Dagestan;;;;;;;;;;;;;x
+caucasus_war_desc;We'll crash this rebellion of Dagestani and annex the region in its entirety.;;;;;;;;;;;;;x
+caucasus_war_setup;Conquer Dagestan;;;;;;;;;;;;;x
+caucasus_war_short;Conquer Dagestan;;;;;;;;;;;;;x
 cb_sykes_picot;The Asia Minor Agreement;;;;;;;;;;;;;x
 cb_sykes_picot_desc;This is where the description should go, if we had one.;;;;;;;;;;;;;x
 cb_sykes_picot_setup;Seize the Arab Provinces;;;;;;;;;;;;;x
@@ -61,6 +69,10 @@ china_acquire_state;Chinese Reunification;Prendre …tat;$STATE$ erwerben;;;;;;;;;
 china_acquire_state_desc;Acquire a Chinese ßYstateßW;Prendre un ßY…tatßW ennemi;Erobern Sie einen feindlichen ßYStaatßW.;;;;;;;;;;;x
 china_acquire_state_setup;Acquire $STATE$ from $RECIPIENT$;Prendre $STATE$ de $RECIPIENT$;$STATE$ von $RECIPIENT$ erwerben;;;;;;;;;;;x
 china_acquire_state_short;Acquire $STATE$;Prendre $STATE$;$STATE$ erwerben;;;;;;;;;;;x
+circassian_war;Conquer Circassia;;;;;;;;;;;;;x
+circassian_war_desc;If we want complete dominance over the Caucasus we have to destroy these uncivilized tribes.;;;;;;;;;;;;;x
+circassian_war_setup;Conquer Circassia;;;;;;;;;;;;;x
+circassian_war_short;Conquer Circassia;;;;;;;;;;;;;x
 civil_war;Civil War;Guerre civile;B¸rgerkrieg;;;;;;;;;;;x
 civil_war_desc;Your nation is in a state of civil war;Votre nation est en guerre civile;Ihre Nation befindet sich in einem B¸rgerkrieg.;;;;;;;;;;;x
 civil_war_setup;End the war by reuniting our nation under a common banner again.;Mettez fin ‡ la guerre en rÈunifiant notre nation sous une mÍme banniËre.;Beenden Sie den Krieg durch die Wiedervereinigung unserer Nation unter einer gemeinsamen Flagge.;;;;;;;;;;;x
@@ -137,6 +149,10 @@ dismantle_forts;Dismantle Fortifications;;Reiﬂt Forts ab;;;;;;;;;;;x
 dismantle_forts_desc;Dismantle forts and naval bases.;;Reiﬂt Forts und Marinest¸tzpunkte ab.;;;;;;;;;;;x
 dismantle_forts_setup;Dismantle forts and naval bases in $STATE$;;Reiﬂt Forts und Marinest¸tzpunkte in $STATE$ ab;;;;;;;;;;;x
 dismantle_forts_short;Dismantle constructions in $STATE$;;Reiﬂt Bauten in $STATE$ ab;;;;;;;;;;;x
+end_slave_trade;End the Atlantic Slave Trade;;;;;;;;;;;;;x
+end_slave_trade_desc;We must stop the inhumane practice of slave selling!;;;;;;;;;;;;;x
+end_slave_trade_setup;End the Atlantic Slave Trade;;;;;;;;;;;;;x
+end_slave_trade_short;End the Atlantic Slave Trade;;;;;;;;;;;;;x
 enforce_clayton_treaty;Enforce Clayton-Bulwer Treaty.;;;;;;;;;;;;;x
 enforce_clayton_treaty_desc;Enforce the Clayton-Bulwer Treaty.;;;;;;;;;;;;;x
 enforce_clayton_treaty_setup;Enforce the Clayton-Bulwer Treaty.;;;;;;;;;;;;;x
@@ -157,6 +173,26 @@ free_peoples;Free People;Peuple libre;Freies Volk;;;;;;;;;;;x
 free_peoples_desc;Liberate a ßYcountryßW from its oppressors;LibÈrer un ßYpaysßW de ses oppresseurs;Befreien Sie ein ßYLandßW von seinen Unterdr¸ckern.;;;;;;;;;;;x
 free_peoples_setup;Hand $STATE$ back to $THIRD$ from $RECIPIENT$;Prendre $STATE$ ‡ $RECIPIENT$ pour le rendre ‡ $THIRD$;Geben Sie $STATE$ an $THIRD$ von $RECIPIENT$ zur¸ck;;;;;;;;;;;x
 free_peoples_short;$THIRD$ acquires $STATE$;$THIRD$ prend $STATE$;$THIRD$ erwirbt $STATE$;;;;;;;;;;;x
+french_conquest_of_canada_france;Liberate QuÈbec;;;;;;;;;;;;;x
+french_conquest_of_canada_france_desc;We must free our brethren living under British oppression!;;;;;;;;;;;;;x
+french_conquest_of_canada_france_setup;Liberate QuÈbec;;;;;;;;;;;;;x
+french_conquest_of_canada_france_short;Liberate QuÈbec;;;;;;;;;;;;;x
+french_conquest_of_canada_uk;Crush French Colonial Ambitions;;;;;;;;;;;;;x
+french_conquest_of_canada_uk_desc;Keep French colonial dreams as nothing more than that.;;;;;;;;;;;;;x
+french_conquest_of_canada_uk_setup;Obtain control of French colonies;;;;;;;;;;;;;x
+french_conquest_of_canada_uk_short;Obtain control of French colonies;;;;;;;;;;;;;x
+french_conquest_of_louisiana_france;Conquer Louisiane;;;;;;;;;;;;;x
+french_conquest_of_louisiana_france_desc;Conquer the entire historical Territoire de la Louisiane, rightfully ours.;;;;;;;;;;;;;x
+french_conquest_of_louisiana_france_setup;Conquer Louisiane;;;;;;;;;;;;;x
+french_conquest_of_louisiana_france_short;Conquer Louisiane;;;;;;;;;;;;;x
+french_conquest_of_louisiana_usa;Defend Louisiana;;;;;;;;;;;;;x
+french_conquest_of_louisiana_usa_desc;Louisiana is rightfully ours and we must defend ourselves from French aggression.;;;;;;;;;;;;;x
+french_conquest_of_louisiana_usa_setup;Defend Louisiana;;;;;;;;;;;;;x
+french_conquest_of_louisiana_usa_short;Defend Louisiana;;;;;;;;;;;;;x
+golden_circle_dismantling;Destroy the CSA;;;;;;;;;;;;;x
+golden_circle_dismantling_desc;Stop the savage Knights of the Golden Circle;;;;;;;;;;;;;x
+golden_circle_dismantling_setup;Destroy the CSA;;;;;;;;;;;;;x
+golden_circle_dismantling_short;Destroy the CSA;;;;;;;;;;;;;x
 great_game_cb;The Great Game;RÈduire;Grˆﬂe reduzieren;;;;;;;;;;;x
 great_game_cb_desc;The Great Game between Russia and the British Empire demands that all ßYuncivilized nationsßW in Central Asia be turned into ßYpuppetsßW to prevent the other from doing the same.;Obliger un autre ßYpaysßW ?se dÈsarmer et ?nous verser des compensations;Zwischen Sie ein anderes ßYLandßW zur Abr¸stung und zu Reparationszahlungen an uns.;;;;;;;;;;;x
 great_game_cb_setup;$RECIPIENT$ becomes a puppet of $ACTOR$;$RECIPIENT$ devient satellite de $ACTOR$;$RECIPIENT$ wird eine Marionette von $ACTOR$;;;;;;;;;;;x
@@ -289,6 +325,10 @@ restore_british_raj;Claim the British Raj;RÈduire;Grˆﬂe reduzieren;;;;;;;;;;;x
 restore_british_raj_desc;Puppet an enemy ßYnationßW that rightfully belongs within the ßYBritish RajßW;Obliger un autre ßYpaysßW ?se dÈsarmer et ?nous verser des compensations;Zwischen Sie ein anderes ßYLandßW zur Abr¸stung und zu Reparationszahlungen an uns.;;;;;;;;;;;x
 restore_british_raj_setup;$RECIPIENT$ becomes a puppet of $ACTOR$;$RECIPIENT$ devient satellite de $ACTOR$;$RECIPIENT$ wird eine Marionette von $ACTOR$;;;;;;;;;;;x
 restore_british_raj_short;$RECIPIENT$ becomes a puppet of $ACTOR$;$RECIPIENT$ devient satellite de $ACTOR$;$RECIPIENT$ wird eine Marionette von $ACTOR$;;;;;;;;;;;x
+restore_neutrality;Restore Neutrality;;;;;;;;;;;;;x
+restore_neutrality_desc;This nation violated antoher nation's neutrality and should face the consequences.;;;;;;;;;;;;;x
+restore_neutrality_setup;Restore neutrality.;;;;;;;;;;;;;x
+restore_neutrality_short;Restore neutrality.;;;;;;;;;;;;;x
 mexico_concession_rus;Californian Crisis;;;;;;;;;;;x
 mexico_concession_rus_desc;Secure territories of Alta California to Colorado river;;;;;;;;;;;x
 mexico_concession_rus_setup;Secure territories of Alta California to Colorado river;;;;;;;;;;;x
@@ -369,6 +409,14 @@ USS_monroe;Miranda Doctrine;Peuple libre;Freies Volk;;;;;;;;;;;;x;;;;;;;;;;;;;;
 USS_monroe_desc;Liberate the Latin people under foreign rule!;LibÂª®er un Âù≥paysÂä¨ de ses oppresseurs;Befreien Sie ein Âù≥LandÂä¨ von seinen UnterdrÓÖùkern.;;;;;;;;;;;x
 USS_monroe_short;Liberate the colonial holdings in the New World;$THIRD$ prend $STATE$;$THIRD$ erwirbt $STATE$;;;;;;;;;;;;x;;;;;;;;;;;;;;
 USS_monroe_setup;Liberate the colonial holdings in the New World;Prendre $STATE$ ?$RECIPIENT$ pour le rendre ?$THIRD$;Geben Sie $STATE$ an $THIRD$ von $RECIPIENT$ zurÓÖùk;;;;;;;;;;;;x;;;;;;;;;;;;;;
+war_of_the_americas_usa;Dismantle the USSA;;;;;;;;;;;;;x
+war_of_the_americas_usa_desc;South American has dared to challenge us, and now they'll face the consequences!;;;;;;;;;;;;;x
+war_of_the_americas_usa_setup;Dismantle the USA;;;;;;;;;;;;;x
+war_of_the_americas_usa_short;Dismantle the USA;;;;;;;;;;;;;x
+war_of_the_americas_ussa;Dismantle the USA;;;;;;;;;;;;;x
+war_of_the_americas_ussa_desc;We can't tolerate such a rival sharing the same continent of ours.;;;;;;;;;;;;;x
+war_of_the_americas_ussa_setup;Dismantle the USA;;;;;;;;;;;;;x
+war_of_the_americas_ussa_short;Dismantle the USA;;;;;;;;;;;;;x
 war_reparations;Reparations;;;;;;;;;;;;;x
 war_reparations_desc;Demand ßYreparationsßW from $RECIPIENT$.;;;;;;;;;;;;;x
 war_reparations_setup;Demand ßYreparationsßW from $RECIPIENT$.;;;;;;;;;;;;;x
@@ -377,3 +425,7 @@ webster_ashburton_cb;Secure the Frontier;;;;;;;;;;;;;x
 webster_ashburton_cb_desc;Enforce our views on the border between Canada and the United States.;;;;;;;;;;;;;x
 webster_ashburton_cb_setup;Assert our border with $RECIPIENT$;;;;;;;;;;;;;x
 webster_ashburton_cb_short;Settle border dispute;;;;;;;;;;;;;x
+take_claimed_land;Enforce Claims;;;;;;;;;;;;;x
+take_claimed_land_desc;Forcefully take claimed lands.;;;;;;;;;;;;;x
+take_claimed_land_setup;Forcefully take claimed lands;;;;;;;;;;;;;x
+take_claimed_land_short;Forcefully take claimed lands;;;;;;;;;;;;;x
