--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -4,6 +4,7 @@ AGRESSION_CIVIL_WAR_NAME;$ORDER$$FIRST$ Civil War;$ORDER$ guerre civile $FIRST$;
 AGRESSION_CIVIL_WAR_NAME_ARC_ENT;The $ORDER$Platine War;;;;;;;;;;;;;x
 AGRESSION_CIVIL_WAR_NAME_ENG_EIC;The East India Company Uprising;;;;;;;;;;;;;x
 AGRESSION_CIVIL_WAR_NAME_QNG_TPG;$ORDER$Taiping Rebellion;;;;;;;;;;;;;x
+AGRESSION_CONQUEST_OF_LOUISIANA;The French Aggression for Louisiana;;;;;;;;;;;;;x
 AGRESSION_CUT_DOWN_TO_SIZE_OTTOMAN_WAR_NAME;The$ORDER$Great Eastern Crisis;;;;;;;;;;;;;x
 AGRESSION_CUT_DOWN_TO_SIZE_OTTOMAN_WAR_NAME_RUS_TUR;The Great Eastern Crisis;;;;;;;;;;;;;x
 AGRESSION_CUT_DOWN_TO_SIZE_WAR_NAME;$ORDER$War of $FIRST$ Aggression;$ORDER$$FIRST$ guerre d'aggression;$ORDER$$FIRST$er Angriffskrieg;;;;;;;;;;;x
@@ -81,9 +82,12 @@ AGRESSION_WAR_CONQUEST_NAME_HAI_DOM;$ORDER$Dominican War of Independence;;;;;;;;
 AGRESSION_WAR_CONQUEST_NAME_SAR_PAP;The Expedition of the Thousand;;;;;;;;;;;;;x
 AGRESSION_WAR_CONQUEST_NAME_TUR_CRE;The $ORDER$Cretan Revolt;;;;;;;;;;;;;x
 AGRESSION_WAR_DISMANTLE_NAME;$ORDER$War of $FIRST$ Aggression;$ORDER$ Offensive Militaire $FIRST$;$ORDER$ $FIRST$ Angriffskrieg;;;;;;;;;;;x
+AGRESSION_WAR_END_SLAVE_TRADE;Punitive Expedition against the Slave Traders;;;;;;;;;;;;;x
 AGRESSION_WAR_ENFORCE_CLAYTON_TREATY;$FIRST$ War to Enforce Clayton-Bulwer Treaty on $SECOND$;;;;;;;;;;;;;x
 AGRESSION_WAR_FORALLIES_NAME;$ORDER$$FIRST$ Conquest of $STATE$ for $COUNTRY$;;;;;;;;;;;;;x
 AGRESSION_WAR_FREE_ALLIED_CORE_NAME;$ORDER$$FIRST$ War of $COUNTRY_ADJ$ Restoration;;;;;;;;;;;;;x
+AGRESSION_WAR_TAKE_CLAIM;$ORDER$$FIRST$ enforcing of claims;;;;;;;;;;;;;x
+NORMAL_WAR_TAKE_CLAIM;$ORDER$$FIRST$ enforcing of claims;;;;;;;;;;;;;x
 AGRESSION_WAR_FREE_BALKANS_NAME;The $ORDER$$FIRST$–$SECOND$ War of the Balkans;;;;;;;;;;;;;x
 AGRESSION_WAR_FREE_NAME;$ORDER$$FIRST$ War of Propping up $COUNTRY$;$ORDER$$FIRST$ guerre de soutien de $COUNTRY$;$ORDER$$FIRST$ Krieg zur Absicherung von $COUNTRY$;;;;;;;;;;;x
 AGRESSION_WAR_GUNBOAT_NAME;Gunboat Diplomacy;;;;;;;;;;;;;x
@@ -191,6 +195,7 @@ AGRESSION_WAR_UNIFICATION_NAME_SAR_AUS;The $ORDER$Italian War of Independence;;;
 AGRESSION_WAR_UNIFICATION_NAME_SAR_KUK;The $ORDER$Italian War of Independence;;;;;;;;;;;;;x
 AGRESSION_WAR_WEBSTER_ASHBURTON;The Aroostook War;;;;;;;;;;;;;x
 GREAT_WAR_NAME;The $ORDER$Great War;La $ORDER$ Grande Guerre;Der $ORDER$Großer Krieg;;;;;;;;;;;x
+NORMAL_ACW_INTERVENTION;$FIRST$ Intervention in the American Civil War;;;;;;;;;;;;;x
 NORMAL_CALL_ALLIES_WAR_NAME;$ORDER$$FIRST$ Call to Arms;;;;;;;;;;;;;
 NORMAL_CIVIL_WAR_NAME;$ORDER$$FIRST$ Civil War;$ORDER$ guerre civile $FIRST$;$ORDER$$FIRST$ Bürgerkrieg;;;;;;;;;;;x
 NORMAL_CIVIL_WAR_NAME_ARC_ENT;The $ORDER$Platine War;;;;;;;;;;;;;x
@@ -212,6 +217,8 @@ NORMAL_CIVIL_WAR_NAME_USA_CSA;The $ORDER$American Civil War;$ORDER$ guerre de ré
 NORMAL_CIVIL_WAR_NAME_USA_CSA_CSA;$ORDER$War of Northern Aggression;$ORDER$ guerre d’agression nordiste;$ORDER$Krieg des Nördlichen Angriffs;;;;;;;;;;;x
 NORMAL_CIVIL_WAR_NAME_USA_CSA_USA;$ORDER$War of the Rebellion;$ORDER$ guerre de rébellion;$ORDER$Rebellionskrieg;;;;;;;;;;;x
 NORMAL_CIVIL_WAR_NAME_USA_FSA;The $ORDER$American Civil War;$ORDER$ guerre de rébellion;$ORDER$Rebellionskrieg;;;;;;;;;;;x
+NORMAL_CONQUEST_OF_CANADA;French Liberation of Québec;;;;;;;;;;;;;x
+NORMAL_CONQUEST_OF_LOUISIANA;The Conquest of Louisiane;;;;;;;;;;;;;x
 NORMAL_CUT_DOWN_TO_SIZE_OTTOMAN_WAR_NAME;The$ORDER$Great Eastern Crisis;;;;;;;;;;;;;x
 NORMAL_CUT_DOWN_TO_SIZE_OTTOMAN_WAR_NAME_RUS_TUR;The Great Eastern Crisis;;;;;;;;;;;;;x
 NORMAL_CUT_DOWN_TO_SIZE_WAR_NAME;$ORDER$$FIRST$–$SECOND$ War;Guerre $ORDER$$FIRST$-$SECOND$;$ORDER$$FIRST$-$SECOND$er Krieg;;;;;;;;;;;x
@@ -225,10 +232,12 @@ NORMAL_CUT_DOWN_TO_SIZE_WAR_NAME_RUS_TUR;The $ORDER$Crimean War;;;;;;;;;;;;;x
 NORMAL_CRIMEAN_WAR_NAME_RUS_TUR;The $ORDER$Crimean War;;;;;;;;;;;;;x
 NORMAL_DEMOCRACY_WAR_NAME;$ORDER$$FIRST$ Restoration of $SECOND$ Democracy;;;;;;;;;;;;;x
 NORMAL_EARLY_WAR_CONCESSION_NAME;$ORDER$War of the $STATE$ Concession;$ORDER$ Guerre de concession de $STATE$;$ORDER$ Krieg der $STATE$-Konzession;;;;;;;;;;;x
+NORMAL_GOLDEN_CIRCLE_DISMANTLEMENT;The $ORDER$ Anti-Confederacy War;;;;;;;;;;;;;x
 NORMAL_PUNITIVE_EXPEDITION_WAR_NAME;The $ORDER$$FIRST$–$SECOND$ War;;;;;;;;;;;;;x
 NORMAL_PUNITIVE_EXPEDITION_WAR_NAME_ENG_PER;The $ORDER$Anglo–Persian War;;;;;;;;;;;;;x
 NORMAL_PUNITIVE_EXPEDITION_WAR_NAME_ENG_QNG;The $ORDER$Opium War;;;;;;;;;;;;;x
 NORMAL_PUNITIVE_EXPEDITION_WAR_NAME_ENG_TPG;$ORDER$Opium War;;;;;;;;;;;;;x
+NORMAL_STOP_FRENCH_COLONIAL_AMBITIONS;War of French Containment;;;;;;;;;;;;;x
 NORMAL_SUBSTATE_STATE_NAME;$ORDER$$FIRST$ Conquest of $COUNTRY_ADJ$ $STATE$;$ORDER$$FIRST$ conquête de $STATE$;$ORDER$$FIRST$e Eroberung von $STATE$;;;;;;;;;;;x
 NORMAL_SYKES_PICOT_WAR_NAME;The$ORDER$Asia Minor Expedition;;;;;;;;;;;;;x
 NORMAL_SYKES_PICOT_WAR_NAME_ENG_TUR;The Asia Minor Expedition;;;;;;;;;;;;;x
@@ -289,6 +298,7 @@ NORMAL_WAR_CONQUEST_NAME_HAI_DOM;$ORDER$Dominican War of Independence;;;;;;;;;;;
 NORMAL_WAR_CONQUEST_NAME_SAR_PAP;The Expedition of the Thousand;;;;;;;;;;;;;x
 NORMAL_WAR_CONQUEST_NAME_TUR_CRE;The $ORDER$Cretan Revolt;;;;;;;;;;;;;x
 NORMAL_WAR_DISMANTLE_NAME;$ORDER$$FIRST$ War to Dismantle the $SECOND$ Empire;Grande Guerre $ORDER$$FIRST$-$SECOND$;$ORDER$$FIRST$-$SECOND$ Größer Krieg;;;;;;;;;;;x
+NORMAL_WAR_END_SLAVE_TRADE;British Expedition to End the Atlantic Slave Trade;;;;;;;;;;;;;x
 NORMAL_WAR_ENFORCE_CLAYTON_TREATY;$FIRST$ War to Enforce Clayton-Bulwer Treaty on $SECOND$;;;;;;;;;;;;;x
 NORMAL_WAR_FORALLIES_NAME;$ORDER$$FIRST$ Conquest of $STATE$ for $COUNTRY$;;;;;;;;;;;;;x
 NORMAL_WAR_FREE_ALLIED_CORE_NAME;$ORDER$$FIRST$ War of $COUNTRY_ADJ$ Restoration;;;;;;;;;;;;;x
@@ -336,6 +346,7 @@ NORMAL_WAR_NAME_REPARATIONS;The $ORDER$$FIRST$–$SECOND$ War;;;;;;;;;;;;;x
 NORMAL_WAR_NAME_REPARATIONS_CHL_PBC;The $ORDER$War of the Confederation;;;;;;;;;;;;;x
 NORMAL_WAR_NATURAL_BORDERS_NAME;$ORDER$$FIRST$–$SECOND$ War of French Restoration;;;;;;;;;;;;;x
 NORMAL_WAR_NEGOTIATE_NAME;$ORDER$$SECOND$ Transfer of $STATE$ to $FIRST$;;;;;;;;;;;;;x
+NORMAL_WAR_OF_THE_AMERICAS;War of the Americas;;;;;;;;;;;;;x
 NORMAL_WAR_PADRI_WAR;The Padri War;;;;;;;;;;;;;x
 NORMAL_WAR_PROTECTORATE_NAME;$ORDER$Acquisition of $FIRST$ $SECOND_COUNTRY$;$ORDER$ $FIRST$ acquisition de $SECOND$;$ORDER$ Übernahme von $FIRST$ $SECOND$;;;;;;;;;;;x
 NORMAL_WAR_PROTECTORATE_NAME_ENG_ASH;The 2nd Ashanti Expedition;;;;;;;;;;;;;x
@@ -372,6 +383,7 @@ NORMAL_WAR_PUPPET_NAME_TUR_ROM;The $ORDER$Romanian War of Independence;;;;;;;;;;
 NORMAL_WAR_PUPPET_NAME_TUR_WAL;The$ORDER$Wallachian Revolution;;;;;;;;;;;;;x
 NORMAL_WAR_REMOVE_WMDS_NAME;$ORDER$War to Prevent $SECOND_COUNTRY$’s Crime Against Humanity;;;;;;;;;;;;;x
 NORMAL_WAR_RESTORE_AMERICA_NAME;The $ORDER$$FIRST$–$SECOND$ War of American Restoration;;;;;;;;;;;;;x
+NOMRLA_WAR_RESTORE_NEUTRALITY;$FIRST$ Expedition Against the Infamous $SECOND$;;;;;;;;;;;;;x
 NORMAL_WAR_RESTORE_ORDER_NAME;$ORDER$$FIRST$ Restoration of Order to the $SECOND$ provinces;$ORDER$$FIRST$ rétablissement de l'ordre dans les provinces de $SECOND$;$ORDER$$FIRST$ Wiederherstellung der Ordnung in den $SECOND$ Provinzen;;;;;;;;;;;x
 NORMAL_WAR_RESTORE_ORDER_NAME_ARG_ENT;The $ORDER$Platine War;;;;;;;;;;;;;x
 NORMAL_WAR_RESTORE_ORDER_NAME_AUS_HUN;$ORDER$The Hungarian Revolution;;;;;;;;;;;;;x
@@ -406,6 +418,8 @@ NORMAL_WAR_RESTORE_ORDER_NAME_TIG_SHW;Zemene Mesafint;;;;;;;;;;;;;x
 NORMAL_WAR_RESTORE_ORDER_NAME_TUR_BHT;The $ORDER$Ottoman Intervention in Kurdistan;;;;;;;;;;;;;x
 NORMAL_WAR_RESTORE_ORDER_NAME_USA_CSA;The American Civil War;;;;;;;;;;;;;x
 NORMAL_WAR_RHINE_CRISIS;The Rhine Crisis;;;;;;;;;;;;;x
+NORMAL_WAR_RUS_CIR;The $ORDER$Russo-Circassian War;;;;;;;;;;;;;x
+NORMAL_WAR_RUS_DAG;The $ORDER$Murid War;;;;;;;;;;;;;x
 NORMAL_WAR_MEXICO_CONCESSION_RUS;Russian Invasion of California;;;;;;;;;;;;;x
 NORMAL_WAR_RUDEBOI_NAME;$ORDER$$FIRST$ War of $SECOND$ Containment;$ORDER$$FIRST$ guerre de confinement $SECOND$;$ORDER$$FIRST$ Krieg der $SECOND$ Beherrschung;;;;;;;;;;;x
 NORMAL_WAR_SAHEL_JIHAD_NAME;$ORDER$$FIRST$ Jihad;;;;;;;;;;;;;x
