--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3389,7 +3389,7 @@ PROV3387;Kirk Kilise;;;;;;;;;;;;;x
 PROV3388;Ahtabolu;;;;;;;;;;;;;x
 PROV3389;Fort Towson;;;;;;;;;;;;;x
 PROV3390;Redut Kolmakovsky;;;;;;;;;;;;;x
-PROV3391;Redut Delarovsky;;;;;;;;;;;;;x
+PROV3391;Redut Delarofsky;;;;;;;;;;;;;x
 PROV3392;Fort Simpson;;;;;;;;;;;;;x
 PROV3393;Fort Reliance;;;;;;;;;;;;;x
 PROV3394;Nordøstlige Indlandsis;;;;;;;;;;;;;x
@@ -4018,4 +4018,3 @@ PROV4016;Chañaritos;;;;;;;;;;;;;x
 PROV4017;Usukhchai;;;;;;;;;;;;;x
 PROV4018;Veluwe;;;;;;;;;;;;;x
 PROV4019;Achterhoek;;;;;;;;;;;;;x
-PROV4020;Poluostrov Alyaska;;;;;;;;;;;;;x
