--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -941,7 +941,7 @@ EVTDESC8153;\nThe Imperial Army failed to stop the revolution in the north! \n\n
 EVTOPTA8153;So be it. We don't need that useless piece of jungle.;;;;;;;;;;;;;x
 EVTOPTB8153;We shall accept it, for now;;;;;;;;;;;;;x
 EVTNAME8160;The Praieiros Party;;;;;;;;;;;;;x
-EVTDESC8160;Given the current state of national affairs, talks about reforms and liberalism are spreading in the Pernambuco Region. n\ But the situation got worse and there are talks about rebellion. \n\nWe should get a hold of the region before it's too late, we can't afford to let those ideas spread.;;;;;;;;;;;;;x
+EVTDESC8160;Given the current state of national affairs, talks about reforms and liberalism are spreading in the Pernambuco Region. But the situation got worse and there are talks about rebellion. \n\nWe should get a hold of the region before it's too late, we can't afford to let those ideas spread.;;;;;;;;;;;;;x
 EVTOPTA8160;Dangerous ideas indeed!;;;;;;;;;;;;;x
 EVTNAME8161;Liberalism Spreads;;;;;;;;;;;;;x
 EVTDESC8161;The liberal rebelion is spreading further! We need to do something about it!;;;;;;;;;;;;;x
