--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1573,3 +1573,5 @@ farrapos_compromise_mild;Paz do Poncho Verde;;;;;;;;;;;;;x
 farrapos_compromise_strong_mild;As part of the Poncho Verde Peace Treaty, we agreeded to adjusts the taxes and tarrifs to protect the local Charque producers.;;;;;;;;;;;;;x
 farrapos_compromise_fair;Paz do Poncho Verde;;;;;;;;;;;;;x
 farrapos_compromise_strong_fair;As part of the Poncho Verde Peace Treaty, we agreeded to adjusts the tarrifs to protect the local Charque producers.;;;;;;;;;;;;;x
+praeiros;Praieiros;;;;;;;;;;;;;x
+
