Prestige changes, vassal revolutions, traditional GPs
- Prestige gain and loss from war significantly reduced to account for the new Baseline mechanic
- Enforcing humiliate CB will now approximately reduce prestige of the defeated party by 10% (instead of about 30)
- Some casus bellis prestige effects have been lowered
- Prestige loss from not enforcing added war goals significantly reduced
- Prestige gain via technology reduced back to 5% per technology level
- Introduced Concert of Europe Great Power Status
- Traditional 5 GPs: Britain, France, Russia, Austria, Prussia have had their starting prestige significantly increased to represent the historical 5 Great Powers (unlike the games 8 slots)
- The optional Minor Greater Power Mechanic now includes ranks 6 (aside from 7 and 8) until 1860, the italian unification
- Adjusted submods that change defines (for example Less RNG submod) to correspond to new prestige changes
- Added a mechanic where a civilized vassal nation with at least 3 million (12m total) population and 400 industrial score (or 6m pops, 24m total) can start an independence war against their overlord. This will prevent countries being permanently turned to a vassal status and will bring overlord countries more challenge to retain their dominancy.

--- a/TGC/localisation/00_events_0090000.csv
+++ b/TGC/localisation/00_events_0090000.csv
@@ -1657,10 +1657,13 @@ EVTDESC98607;Our diplomacy has proven successful: $COUNTRY$ has been granted ful
 EVTNAME98607;$COUNTRY$ Granted Independence;;;;;;;;;;;;;x
 EVTOPTA98607;We are most fortunate.;;;;;;;;;;;;;x
 EVTDESC98608;It appears the threat of a war of independence was enough to secure $COUNTRY$’s freedom. Crowds have gathered in $CAPITAL$ to cheer on our Independence Day!;;;;;;;;;;;;;x
-EVTDESC98610;It appears the time for diplomacy has ended. We have received word from the $FROMCOUNTRY_ADJ$ government that they have demanded independence-or it will be war.;;;;;;;;;;;;;x
+EVTDESC98609;Streets are restless, and our overlords tyranny shall rule over us no more. It is time to secure our $COUNTRY$’s freedom!;;;;;;;;;;;;;x
+EVTNAME98609;March onwards to Freedom!;;;;;;;;;;;;;x
+EVTOPTA98609;Sons of $COUNTRY$, assemble!;;;;;;;;;;;;;x
 EVTNAME98610;$FROMCOUNTRY$ Demands Independence;;;;;;;;;;;;;x
 EVTOPTA98610;Then it is war!;;;;;;;;;;;;;x
 EVTOPTB98610;We shall let them go. For now.;;;;;;;;;;;;;x
+EVTDESC98610;It appears the time for diplomacy has ended. We have received word from the $FROMCOUNTRY_ADJ$ government that they have demanded independence-or it will be war.;;;;;;;;;;;;;x
 EVTDESC98611;Since $COUNTRY$ was denied its independence, there has been talk of open rebellion in the streets of $CAPITAL$. Fighting against our overlords might surely result in us being crushed, however. Since we have no recourse, secretly approaching some of the enemies of our overlord might gain us some allies in the war to come.;;;;;;;;;;;;;x
 EVTNAME98611;Must We Fight Alone?;;;;;;;;;;;;;x
 EVTOPTA98611;Attempt to find allies... quietly.;;;;;;;;;;;;;x
