--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -218,7 +218,7 @@ gunboat_desc;Force them to resume repayment of their debts to us.;Les forcer à r
 gunboat_setup;Will force them to honour their debts to us.;Nous les forceront à honorer les dettes contractées envers nous.;Werden sie zwingen, uns ihre Schulden zurückzuzahlen.;;;;;;;;;;;x
 gunboat_short;Repay Debts;Rembourser les dettes;Schulden tilgen;;;;;;;;;;;x
 humiliate;Humiliate;Humilier;Erniedrigen;;;;;;;;;;;x
-humiliate_desc;Show our military might by humiliating an enemy §Ycountry§W, thus increasing our §Yprestige§W while lowering theirs;Afficher notre puissance militaire en humiliant un §Ypays§W ennemi et en augmentant notre §Yprestige§W tout en réduisant le leur;Zeigen Sie unsere Militärmacht durch Erniedrigung eines feindlichen §YLandes§W, wodurch Sie unser §YPrestige§W steigern und ihres verringern.;;;;;;;;;;;x
+humiliate_desc;Show our military might by humiliating an enemy §Ycountry§W, thus increasing our §Yprestige§W while lowering theirs (by cca 10 percent);Afficher notre puissance militaire en humiliant un §Ypays§W ennemi et en augmentant notre §Yprestige§W tout en réduisant le leur;Zeigen Sie unsere Militärmacht durch Erniedrigung eines feindlichen §YLandes§W, wodurch Sie unser §YPrestige§W steigern und ihres verringern.;;;;;;;;;;;x
 humiliate_setup;Humiliate $RECIPIENT$;Humilier $RECIPIENT$;$RECIPIENT$ erniedrigen;;;;;;;;;;;x
 humiliate_short;Humiliate $RECIPIENT$;Humilier $RECIPIENT$;$RECIPIENT$ erniedrigen;;;;;;;;;;;x
 hungarian_game_escalation1;Carve up Hungary;;;;;;;;;;;;;x
