--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1540,3 +1540,5 @@ american_dominions;American Dominions;;;;;;;;;;;;;x
 american_dominions_desc;The Crown dominates the Atlantic Seaboard. It is a costly venture.;;;;;;;;;;;;;x
 under_the_british_crown;Under the British Crown;;;;;;;;;;;;;x
 under_the_british_crown_desc;We are subjects of Great Britain;;;;;;;;;;;;;x
+concert_of_europe_gp;Concert of Europe - Traditional Great Power Status;;;;;;;;;;;;;x
+concert_of_europe_gp_desc;After the Congress of Vienna, the power on the world stage was concentrated between 5 Great Powers - Britain, France, Russia, Austria and Prussia. Success of them working together fluctuated throughout decades, but one thing remained constant: their status. It was not until late 19th and early 20th century that other countries started being considered their equals: such as Italy and the United States.;;;;;;;;;;;;;x
