some more red text for overrides

--- a/TGC/localisation/00_decisions-options.csv
+++ b/TGC/localisation/00_decisions-options.csv
@@ -45,13 +45,13 @@ option_enable_money_hoarder_desc;Money hoarder modifiers will trigger when a cou
 option_enable_money_hoarder_title;Option: Enable Money Hoarder Modifiers;;;;;;;;;;;;;x
 option_enable_options_desc;This decision shows all optional decisions to tweak and change the game’s behaviour from vanilla TGC. This, along with all decisions it enables, will disappear January 1st 1837 to reduce clutter, so you have a year in-game to pick and choose what you want. Once a tweak is chosen, you can’t disable it anymore, so if you mis-click you need to edit your save or start a new game.;;;;;;;;;;;;;x
 option_enable_options_title;Show ‘Options’ Decisions;;;;;;;;;;;;;x
-option_enable_overrides_desc;This decision allows players to access override decisions which give them greater control of their country's laws regarding borders and conscription. This Option also allows you to enact Government Campaigns, where you can invest a part of your monthly budget to influence research, infamy, migration, population growth and others at the cost of money. Beware: Money is deducted on monthly basis from your treasury. Pay attention to it lest you go bankrupt.;;;;;;;;;;;;;x
+option_enable_overrides_desc;This decision allows players to access override decisions which give them greater control of their country's laws regarding borders and conscription. This Option also allows you to enact Government Campaigns, where you can invest a part of your monthly budget to influence research, infamy, migration, population growth and others at the cost of money. §RBeware: Money is deducted on daily basis from your treasury. Pay attention to it lest you go bankrupt!§!;;;;;;;;;;;;;x
 option_enable_overrides_title;Option: Enable Override Decisions;;;;;;;;;;;;;x
 option_enable_spectator_mode_desc;Disable ‘Winds of Westernization’ events for spectator games as an uncivilized nation.;;;;;;;;;;;;;x
 option_enable_spectator_mode_title;Option: Set Up Game In Spectator Mode;;;;;;;;;;;;;x
 option_enable_usa_gtfo_africa_desc;With this option, AI USA will NOT get events to reduce its influence in Africa, as historically the USA was not interested in Africa beyond Liberia. This will not affect a player USA. Keep in mind if you enable this, you will likely see weird Yankee things in Africa.;;;;;;;;;;;;;x
 option_enable_usa_gtfo_africa_title;Option: Enable USA influence in Africa;;;;;;;;;;;;;x
-option_minor_greater_power_desc;Bans the 7th and 8th Great-Power from influencing nations through diplomacy (although not through the use of CB's and other ways of earning influence). For people that like a game with less nations meddling with global affairs.;;;;;;;;;;;;;x
+option_minor_greater_power_desc;Bans 6th (until 1860), 7th and 8th Great-Power from influencing nations through diplomacy (although not through the use of CB's and other ways of earning influence). For people that like a game with less nations meddling with global affairs, and more in line with historical Great Powers, instead of Paradox' arbitrary 8 seeds.;;;;;;;;;;;;;x
 option_minor_greater_power_title;Option: Enable Minor Great-Powers;;;;;;;;;;;;;x
 option_mobilisation_limiter_desc;Enable the optional mechanic that limits the situations where the AI can mobilize, stopping them from throwing their economy down the Grand Canyon for every little war.;;;;;;;;;;;;;x
 option_mobilisation_limiter_title;Option: Enable Mobilisation Limiter;;;;;;;;;;;;;x
@@ -61,7 +61,7 @@ override_close_change_border_policy_desc;We decided that our country is good as 
 override_close_change_border_policy_title;Hide the Border Policy Options;;;;;;;;;;;;;x
 override_disable_override_desc;This hides the overide decisions from view to reduce clutter.;;;;;;;;;;;;;x
 override_disable_override_title;Hide 'Override' Decisions;;;;;;;;;;;;;x
-override_enable_override_desc;This decision shows a number of player only decisions which allow you to force through certain law and RGO changes, as well as using province immigrators.;;;;;;;;;;;;;x
+override_enable_override_desc;This decision allows players to access override decisions which give them greater control of their country's laws regarding borders and conscription. This Option also allows you to enact Government Campaigns, where you can invest a part of your monthly budget to influence research, infamy, migration, population growth and others at the cost of money. §RBeware: Money is deducted on DAILY basis from your treasury. Pay attention to it lest you go bankrupt!§!;;;;;;;;;;;;;x
 override_enable_override_title;Show 'Override' Decisions;;;;;;;;;;;;;x
 override_infamy_for_growth_modifier_removal_desc;Cancel the current ongoing growth campaign.;;;;;;;;;;;;;x
 override_infamy_for_growth_modifier_removal_title;Stop the Ongoing Population Campaign;;;;;;;;;;;;;x
