--- a/TGC/localisation/00_decisions-options.csv
+++ b/TGC/localisation/00_decisions-options.csv
@@ -137,3 +137,5 @@ override_hide_dm_title;Show Direct Migration Control;;;;;;;;;;;;;x
 override_hide_dm_desc;This will open the decision menu that lets you control your Direct Migration Campaigns. To learn more how DM works, once you enable the menu, enact decision "Immigration Options" and choose the wikipedia option (How does this work again).;;;;;;;;;;;;;x
 override_show_dm_title;Hide Direct Migration Control;;;;;;;;;;;;;x
 override_show_dm_desc;This decision exists so you can declutter your decision tab after setting your preferences. Once you wish to stop the campaign, simply show the decisions again and stop the campaign via Immigration Options event.;;;;;;;;;;;;;x
+override_more_conversion_title;Conversion Campaign - Employ Missionaries;;;;;;;;;;;;;x
+override_more_conversion_desc;Subsidise missionary activities in our country and help the misguided adopt the true beliefs.;;;;;;;;;;;;;x
