--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3479,5 +3479,5 @@ greater_austrian_destiny_desc;Austrians have always walked a path slightly apart
 greater_austrian_destiny_title;A Greater Austrian Destiny?;;;;;;;;;;;;;x
 disputed_territories_por_desc;Taken from Portugal in the 1809 Spanish-Portuguese war and the treaty of Badajoz, border territories such as Rubias and Olivenca were stripped from Portugal under the sanction of Napoleon. While the treaty of Vienna in 1815, signed by Spain, has included an obligation for Spain to return these territories, they have failed to do so. Thus, we must reclaim them ourselves.;;;;;;;;;;;;;x
 disputed_territories_por_title;Disputed Territories;;;;;;;;;;;;;x
-moroccan_reconquest_por_desc;We have completed our reconquests of Olivenca and Rubias from Spain, and now it is time to look further. Ceuta, Tangiers, and Ifni were once our holdings but have been lost for quite some time now. With Spanish influence gone, our time to strike is now...;;;;;;;;;;;;;x
-moroccan_reconquest_port_title;Moroccan Reconquest;;;;;;;;;;;;;x
+morocco_reconquest_por_desc;We have completed our reconquest of Olivenca and Rubias from Spain, and now it is time to look further. Ceuta, Tangiers, and Ifni were once our holdings but have been lost for quite some time now. With Spanish influence gone, our time to strike is now...;;;;;;;;;;;;;x
+morocco_reconquest_port_title;Moroccan Reconquest;;;;;;;;;;;;;x
