Lots of loc, capital choice

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -998,4 +998,9 @@ EVTOPTA8404;"Albatroz! Albatroz!";;;;;;;;;;;;;x
 EVTOPTB8404;HA, the good old times.;;;;;;;;;;;;;x
 EVTNAME8405;The Beautiful Game;;;;;;;;;;;;;x
 EVTDESC8405;The Paulista Charles Miller came back from England, where he had studied, with two footballs, a book of rules, a set of uniforms and the experience of having learned the sport invented by the English. \n\nMiller and other residents in São Paulo just played the first match, the employees of the Gas Company playing against employees of the São Paulo Railway. The match was played in the valley of Carmo, and the employees of the railroad company won 4-2. \n\n Now it seems the new sport is gathering quite a lot of clout, I wonder where it will take us...;;;;;;;;;;;;;x
-EVTOPTA8405;Cool game, but I this is of no much consequence to the country as a whole. Am I right?;;;;;;;;;;;;;x
+EVTOPTA8405;Cool game, but I think this is of no much consequence to the country as a whole. Am I right?;;;;;;;;;;;;;x
+EVTNAME8410;A new capital;;;;;;;;;;;;;x
+EVTDESC8410;Rio de Janeiro has served as our capital for many years, but the changing times and political landscape prompt us to consider the possibility of moving it elsewhere. Rio has historical significance and is a cultural hub, its natural beauty and vibrant atmosphere have made it a beloved city. However, it also faces issues such as overcrowding and logistical challenges. \n\nMoving to a new capital could provide a fresh start and the opportunity to plan a more efficient administrative center. It might stimulate development in other regions of our vast nation.;;;;;;;;;;;;;x
+EVTOPTA8410;So be it! We need a new capital.;;;;;;;;;;;;;x
+EVTOPTB8410;Rio de Janeiro is just fine.;;;;;;;;;;;;;x
+EVTOPTC8410;We can decide it later...;;;;;;;;;;;;;x
