--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3496,3 +3496,5 @@ disputed_territories_por_desc;Taken from Portugal in the 1809 Spanish-Portuguese
 disputed_territories_por_title;Disputed Territories;;;;;;;;;;;;;x
 moroccan_reconquest_por_desc;We have completed our reconquest of Olivenca and Rubias from Spain, and now it is time to look further. Ceuta, Tangiers, and Ifni were once our holdings but have been lost for quite some time now. With Spanish influence gone, our time to strike is now...;;;;;;;;;;;;;x
 moroccan_reconquest_port_title;Moroccan Reconquest;;;;;;;;;;;;;x
+a_new_capital_for_brasil_title;A new capital;;;;;;;;;;;;;x
+a_new_capital_for_brasil_desc;Rio de Janeiro has served as our capital for many years, but the changing times and political landscape prompt us to consider the possibility of moving it elsewhere.;;;;;;;;;;;;;x
