Added Russian Djibouti & Hawaii, different adjustments elsewhere
- Russian Cossack Expedition to Djibouti event
- Hawaiian Project decision for Russia
- Pacific Islands will now properly start as colonial, therefore fixing the Guano Islands Act bug among other things that would make new provinces states, not colonies
- Doubled the emigration push if country enacts genocide policies
- Occupied territory should now have the same effects of War Torn modifier (unsure if it works even)
- Increased attacking penalties into Mountains, Marshes and Jungles by 1
- Increased dig in cap increase in last 2 army technologies
- Experimentally halved unemployment push values for migration
- Added Russian, Japanese, Oceanic and American renaming of Hawaii and other mid-Pacific islands

--- a/TGC/localisation/00_decisions-rename.csv
+++ b/TGC/localisation/00_decisions-rename.csv
@@ -102,4 +102,6 @@ suazi_rename_title;Rename Suazi!;;;;;;;;;;;;;x
 transvaal_rename_desc;Transvaal is rightfully $COUNTRY_ADJ$, and should use $COUNTRY_ADJ$ names.;;;;;;;;;;;;;x
 transvaal_rename_title;Rename Transvaal!;;;;;;;;;;;;;x
 zout_rename_desc;Zoutspanberg is rightfully $COUNTRY_ADJ$, and should use a $COUNTRY_ADJ$ name.;;;;;;;;;;;;;x
-zout_rename_title;Rename Zoutspanberg!;;;;;;;;;;;;;x
+zout_rename_title;Rename Hawaii!;;;;;;;;;;;;;x
+rename_hawaii_desc;Hawaii is rightfully $COUNTRY_ADJ$, and should use a $COUNTRY_ADJ$ name.;;;;;;;;;;;;;x
+rename_hawaii_title;Rename Hawaii!;;;;;;;;;;;;;x
