--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -4018,3 +4018,4 @@ PROV4016;Chañaritos;;;;;;;;;;;;;x
 PROV4017;Usukhchai;;;;;;;;;;;;;x
 PROV4018;Veluwe;;;;;;;;;;;;;x
 PROV4019;Achterhoek;;;;;;;;;;;;;x
+PROV4020;Poluostrov Alyaska;;;;;;;;;;;;;x
