New capital, pt2

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1001,6 +1001,17 @@ EVTDESC8405;The Paulista Charles Miller came back from England, where he had stu
 EVTOPTA8405;Cool game, but I think this is of no much consequence to the country as a whole. Am I right?;;;;;;;;;;;;;x
 EVTNAME8410;A new capital;;;;;;;;;;;;;x
 EVTDESC8410;Rio de Janeiro has served as our capital for many years, but the changing times and political landscape prompt us to consider the possibility of moving it elsewhere. Rio has historical significance and is a cultural hub, its natural beauty and vibrant atmosphere have made it a beloved city. However, it also faces issues such as overcrowding and logistical challenges. \n\nMoving to a new capital could provide a fresh start and the opportunity to plan a more efficient administrative center. It might stimulate development in other regions of our vast nation.;;;;;;;;;;;;;x
-EVTOPTA8410;So be it! We need a new capital.;;;;;;;;;;;;;x
+EVTOPTA8410;So be it! We need a new capital, start the research process.;;;;;;;;;;;;;x
 EVTOPTB8410;Rio de Janeiro is just fine.;;;;;;;;;;;;;x
 EVTOPTC8410;We can decide it later...;;;;;;;;;;;;;x
+EVTNAME8412;A new capital;;;;;;;;;;;;;x
+EVTDESC8412;We have narrowed down our options for a new capital to several cities, each with its unique merits and drawbacks. Belo Horizonte is a nice central city, and is fairly well planned \n\n But there is the possibility of embarking on an ambitious endeavor to build an entirely new capital city from scratch, but this will cost quite a lot of money.;;;;;;;;;;;;;x
+EVTOPTA8412;Belo Horizonte, a fairly central city, and easy to defend.;;;;;;;;;;;;;x
+EVTOPTB8412;Back to Salvador, our old capital!;;;;;;;;;;;;;x
+EVTOPTC8412;São Paulo, which is shaping up to be the country's main metropole.;;;;;;;;;;;;;x
+EVTOPTD8412;Manaus, in the heart of the amazon, to bring progress across the country.;;;;;;;;;;;;;x
+EVTOPTE8412;We should build a city from scratch.;;;;;;;;;;;;;x
+EVTNAME8413;A new capital;;;;;;;;;;;;;x
+EVTDESC8413;After months of research, the capital proposal is ready. Said proposal is to construct a massive planned city in the heart of the country: Brasília. \n\nThis city would encompass all the essential elements a capital requires—meticulously planned layout, ease of navigation, impeccable organization, a central location, defensibility, and a safe distance from the major urban centers that are susceptible to uprisings. It would stand as a genuine marvel of urban planning, architectural design, and engineering prowess.;;;;;;;;;;;;;x
+EVTOPTA8413;So be it! Start the construction!;;;;;;;;;;;;;x
+EVTOPTB8413;We don't quite have the resources right now, we can start it later.;;;;;;;;;;;;;x
